crates/toml_edit/tests/fixtures/invalid/float-no-leading-zero.stderr
TOML parse error at line 1, column 10
  |
1 | answer = .12345
  |          ^
Invalid floating-point number
Expected leading digit
